feat：添加虚拟线程配置